remove css property in class site to fix the double scrollbar

--- a/src/scss/layout/_content.scss
+++ b/src/scss/layout/_content.scss
@@ -30,7 +30,7 @@ ngrome-logo {
 // ------------------------------
 
 .site {
-  overflow-y: scroll;
+  // overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   width: 100%;
   height: 100%;
